--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "prueba_tecnica_ecommerce",
+  "name": "prueba_tecnica_mic",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
